{{$NEXT}}

1.000012 2019-06-17

- Add feature to create simple stories. Written by Narsimham Chelluri.

1.000011 2019-06-12

- Fix handling of project names. This used to be munged in a way that didn't
  make any sense. Now we simply look for project names exactly as they're
  passed on the command line. Fixed by Narsimham Chelluri. GH #25.


1.000010 2018-01-04

- Require the latest WebService::PivotalTracker, which is needed to include
  the PT requester's name without throwing an exception.

- Don't die if optional git configuration keys aren't present.


1.000009 2018-01-04

- Added an option to include the PT requester's name in the PR text. If your
  PRs are relayed to Slack or another communication mechanism this is an
  additional way to alert someone that they have work to review.


1.000008 2017-07-21

- Fixed call to instantiate AskPullRequestQuestions object.


1.000007 2017-07-04

- I should pull before releasing. :(


1.000006 2017-07-04

- Fixed tests so that they do not fail on systems without git installed.


1.000005 2017-06-22

- The namespace used for question classes is now configurable via the
  `git.submit-work.question-namespaces` config item. This can contain multiple
  namespaces separated by a space too.


1.000004 2017-05-24

- Documentation improvements only. No code changes.


1.000003 2017-05-18

- Removed the use List::Gather. This seems to be the most likely culprit for
  some very odd test failures seen with threaded versions of Perl. See
  https://rt.cpan.org/Ticket/Display.html?id=121777 for details.


1.000002 2017-05-04

- The "--project" CLI argument is now optional. By default all projects are
  searched for stories which can be delivered.


1.000001 2017-04-26

- Add IPC::System::Simple as a prereq for the benefit of autodie. Reported by
  Slaven Rezić. RT #121377.


1.000000 2017-04-24

- First public release.